# trading-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  BACKTEST_FIXES.md  BACKTEST_TROUBLESHOOTING.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.proxy  Dockerfile.services  GAP_ANALYSIS.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  ISSUE_TRACKER.md  Makefile  PERPS_QUICKSTART.md  PRD.txt  PRODUCTION_READINESS_QUICK_REF.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_STATUS.md  PROJECT_SUMMARY.md  QA_CHECKLIST.md  QUICK_REFERENCE.md  READINESS_ASSESSMENT.md  README.md  README_TRADING.md  SERVICES.md  STATUS.md  STRATEGY.md  UI_REDESIGN_NOTES.md  alembic.ini  backtest_results.json  debug_config.py  docker-compose.vps.yml  docker-compose.yml  execution_service.go  execution_service_test.go  feed_handler.go  full_test_output.txt  (+32 more)
.github/: copilot-instructions.md
.ralphy/: HISTORY.md
alembic/: env.py
backtest/: __init__.py  backtester.py
config/: risk.yaml  signal_engine.yaml  strategy.yaml  venues.yaml
configs/: safety_margin_block.yaml  safety_normal_testnet.yaml  safety_session_runtime_cap.yaml  safety_session_trade_cap.yaml  zoomex_example.yaml
core/: data_feed.py  engine.py
dashboard/: app.py
data/: integration_test.db  test.db
docs/: CODEBASE_STATUS_2026-03-02.md  PAPER_MODE.md  PERPS_ENHANCEMENTS.md  PERPS_QUICK_REFERENCE.md  PERPS_SAFETY_DIAGNOSTICS.md  PERPS_STRATEGY_GUIDE.md  PERPS_STRATEGY_SWEEP_REPORT.md  SAFETY_VALIDATION_REPORT.md  SELF_LEARNING_PLAN.md  STRATEGY_STUDIO.md  TESTNET_SAFETY_RUNBOOK.md  UNIFIED_ARCHITECTURE.md  agents.md  api-reference.md  indicators_vwap_orderbook.md  monitoring.md  research-strategies.md  runbook.md  signals.md  vault.md
frontend/: TESTING.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
frontend_v2/: package-lock.json  package.json
plans/: phase6-production-readiness-plan.md  plan.md  unified-platform-plan.md  unified-trading-bot.code-workspace
polymarket-copy-trading/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
polymarket-copy-trading/config/: default.yaml
polymarket-copy-trading/src/: __init__.py  __main__.py  app.py  cli.py  client.py  config.py  copy_engine.py  executor.py  models.py  monitor.py  persistence.py  risk_manager.py
polymarket-copy-trading/tests/: __init__.py  conftest.py  test_config.py  test_copy_engine.py  test_executor.py  test_models.py  test_monitor.py  test_persistence.py  test_risk_manager.py
sample_data/: btc_4h.csv  btc_eth_4h.parquet
scripts/: README-LOCAL.md  backup.sh  check_migrations.py  create_demo_agents.py  deploy-local.ps1  docker_e2e_smoke.sh  enable_self_learning.py  prewarm.py  setup_copilot_oauth.py  setup_wireguard.sh  smoke_test.sh
src/: __init__.py  api_server.py  config.py  container.py  database.py  database_strategies_snippet.py  db_schema.py  dynamic_strategy.py  exchange.py  indicators.py  interfaces.py  llm_client.py  logging_config.py  main.py  messaging.py  metrics.py  models.py  monolith.py  notifications.py  ops_api_service.py  (+7 more)
(+308 files in other folders)
